--- a/Testing iMeeting/Web.config
+++ b/Testing iMeeting/Web.config
@@ -9,6 +9,8 @@
   <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
+
+    <!--<add name="DefaultConnection" connectionString="Data Source=(LocalDB)\v11.0; Integrated Security=True; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />-->
     <add name="DefaultConnection" connectionString="Data Source=172.16.14.150;initial catalog=Osama_iMeeting1;persist security info=True;user id=qaserver;password=apple123!@#;MultipleActiveResultSets=True;App=EntityFramework;" providerName="System.Data.SqlClient" />
 
   </connectionStrings>
