--- a/Testing iMeeting/packages.config
+++ b/Testing iMeeting/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net472" />
   <package id="bootstrap" version="5.1.0" targetFramework="net472" />
+  <package id="ChoETL" version="1.2.1.22" targetFramework="net472" />
   <package id="ClosedXML" version="0.95.4" targetFramework="net472" />
   <package id="DocumentFormat.OpenXml" version="2.7.2" targetFramework="net472" />
   <package id="EntityFramework" version="6.4.4" targetFramework="net472" />
@@ -38,8 +39,14 @@
   <package id="Modernizr" version="2.8.3" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="11.0.1" targetFramework="net472" />
   <package id="Owin" version="1.0" targetFramework="net472" />
+  <package id="System.CodeDom" version="4.4.0" targetFramework="net472" />
+  <package id="System.ComponentModel.Annotations" version="4.4.1" targetFramework="net472" />
+  <package id="System.Configuration.ConfigurationManager" version="4.4.1" targetFramework="net472" />
+  <package id="System.Data.SqlClient" version="4.4.3" targetFramework="net472" />
   <package id="System.IO.FileSystem.Primitives" version="4.0.1" targetFramework="net472" />
   <package id="System.IO.Packaging" version="4.0.0" targetFramework="net472" />
+  <package id="System.Reflection.Emit" version="4.3.0" targetFramework="net472" />
+  <package id="System.Reflection.Emit.Lightweight" version="4.3.0" targetFramework="net472" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.3" targetFramework="net472" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net472" />
   <package id="Unity" version="5.11.1" targetFramework="net472" />
