--- a/iMeeting.BAL/packages.config
+++ b/iMeeting.BAL/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="ChoETL" version="1.2.1.22" targetFramework="net472" />
   <package id="ClosedXML" version="0.95.4" targetFramework="net472" />
   <package id="DocumentFormat.OpenXml" version="2.7.2" targetFramework="net472" />
   <package id="ExcelNumberFormat" version="1.0.10" targetFramework="net472" />
@@ -8,8 +9,14 @@
   <package id="Microsoft.AspNet.WebPages" version="3.2.7" targetFramework="net472" />
   <package id="Microsoft.CSharp" version="4.7.0" targetFramework="net472" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net472" />
+  <package id="System.CodeDom" version="4.4.0" targetFramework="net472" />
+  <package id="System.ComponentModel.Annotations" version="4.4.1" targetFramework="net472" />
+  <package id="System.Configuration.ConfigurationManager" version="4.4.1" targetFramework="net472" />
+  <package id="System.Data.SqlClient" version="4.4.3" targetFramework="net472" />
   <package id="System.IO.FileSystem.Primitives" version="4.0.1" targetFramework="net472" />
   <package id="System.IO.Packaging" version="4.0.0" targetFramework="net472" />
+  <package id="System.Reflection.Emit" version="4.3.0" targetFramework="net472" />
+  <package id="System.Reflection.Emit.Lightweight" version="4.3.0" targetFramework="net472" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net472" />
   <package id="Unity" version="5.11.1" targetFramework="net472" />
 </packages>
