--- a/Testing iMeeting/Web.config
+++ b/Testing iMeeting/Web.config
@@ -15,11 +15,18 @@
 
   </connectionStrings>
   <appSettings>
+    <add key="Host" value="smtp.gmail.com"/>
+    <add key="EnableSsl" value="true"/>
+    <add key="UserName" value="autoislamabad@gmail.com"/>
+    <add key="Password" value="iot3base4"/>
+    <add key="Port" value="587"/>
+  </appSettings>
+  <!--<appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-  </appSettings>
+  </appSettings>-->
   <system.web>
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.7.2" />
